- fix overflow hidden fluidbox

--- a/src/scss/components/_blocks.scss
+++ b/src/scss/components/_blocks.scss
@@ -187,7 +187,7 @@
 
 .games {
   .block {
-    .full {
+    &.full {
       overflow: unset;
     }
   }
